# MessageSystem

./: LocalBuild.py  README.md  log.txt
client/config/: AsyncConfig.xml  CMakeLists.txt
cmake/modules/: FindAsync.cmake  FindCatch.cmake  FindGTest.cmake  FindLogging.cmake  FindMono.cmake  FindPython.cmake  FindRobos.cmake  FindTestMathUtils.cmake  FindUtilities.cmake  Findgtest.cmake  ImportGTest.cmake  ProjectLinker.cmake  Utilities.cmake
cmake/toolchains/: toolchain_unix_x32.cmake  toolchain_unix_x64.cmake  toolchain_unix_x86.cmake  toolchain_windows_x64.cmake  toolchain_windows_x86.cmake
cpp/Async/src/Async/: CMakeLists.txt  ConcurrencyStates.cpp  ContinuableWorkItem.cpp  Engine.cpp  JobPriorities.cpp  PromiseBase.cpp  PromiseBaseImpl.cpp  Scheduler.cpp  WorkItem.cpp  WorkItemStates.cpp  WorkerThread.cpp
cpp/Async/src/Async/Factories/: EngineFactory.cpp
cpp/Async/src/Async/unitTest/: AsyncExecution_unit.cpp  Async_unit.cpp  CMakeLists.txt  ContinuableWorkItem_unit.cpp  Engine_unit.cpp  MockScheduler.cpp  MockScheduler.hpp  MockWorkItem.cpp  MockWorkItem.hpp  Promise_unit.cpp  SimpleContinuation_unit.cpp  TestEngine10SchedulersConfig.xml  TestEngine2SchedulersConfig.xml  TestUtilities.cpp  TestUtilities.hpp  ValueHolder_unit.cpp  WorkItemAndScheduler_unit.cpp  WorkItem_unit.cpp  WorkerThread_unit.cpp
cpp/Async_FT/include/: MathUtils.hpp  PromiseFactory.hpp
cpp/Async_FT/src/: Async_test.cpp  CMakeLists.txt  MathUtils.cpp  SimpleContinuation_test.cpp  SimpleControlFlow_test.cpp  SimpleExecution_test.cpp  main.cpp
cpp/Execution/src/Async/: CMakeLists.txt  ContinuableWorkItem.cpp  Engine.cpp  PromiseBase.cpp  Scheduler.cpp  WorkItemStateMachine.cpp  WorkerThread.cpp
cpp/Execution/src/Async/Factories/: EngineFactory.cpp
cpp/Execution/src/Async/unitTest/: CMakeLists.txt  Engine_unit.cpp  MockScheduler.hpp  SimpleContinuation_unit.cpp  TestUtilities.cpp  TestUtilities.hpp  WorkItemAndScheduler_unit.cpp  WorkItemStateMachineUnitTestInterface.cpp  WorkItemStateMachineUnitTestInterface.hpp  WorkerThread_unit.cpp
cpp/Robos/src/Robos/: CMakeLists.txt  InitNodeBase.cpp  MasterNode.cpp  MessageBase.cpp  NodeBase.cpp  NodeDatabase.cpp  NodeHelper.cpp  PyNodeBase.cpp  Robos.cpp
cpp/Robos/src/Robos/unitTest/: CMakeLists.txt  CountTestNode.cpp  CountTestNode.hpp  MasterNode_unit.cpp  MessageBase_unit.cpp  NodeDatabase_unit.cpp  Robos_unit.cpp  ShutdownTestNode.cpp  ShutdownTestNode.hpp  TestCountInitNode.cpp  TestCountInitNode.hpp  TestCountMessage.cpp  TestCountMessage.hpp  TestEngineConfig.xml  TestInitNode.cpp  TestInitNode.hpp  TestMessageA.cpp  TestMessageA.hpp  TestMessageB.cpp  TestMessageB.hpp  TestMessageC.cpp  TestMessageC.hpp  TestNode.cpp  TestNode.hpp  TestNodeNameTemplate.cpp  TestNodeNameTemplate.hpp  TestNodeSubscriberTemplate.cpp  TestNodeSubscriberTemplate.hpp  TestNodeTemplate.cpp  TestNodeTemplate.hpp
cpp/Robos_FT/Robos_FT_Cpp_Client/src/: CMakeLists.txt  Robos_FT_Cpp_Client_Config.xml  main.cpp
cpp/Robos_FT/Robos_FT_Cpp_Client/src/Messages/: FactorialMessage.cpp  SensorMessage.cpp
cpp/Robos_FT/Robos_FT_Cpp_Client/src/Nodes/: FactorialNode.cpp  SensorNode.cpp
cpp/Robos_FT/src/: CMakeLists.txt  Robos_FTConfig.xml  Robos_test.cpp
cpp/TutorialRobot/: ReadMe.txt
cpp/TutorialRobot/src/: CMakeLists.txt
cpp/TutorialRobot/src/GPS/: CMakeLists.txt
cpp/TutorialRobot/src/GPS/Messages/: GPSMessage.cpp
cpp/TutorialRobot/src/GPS/Nodes/: GPSSensorNode.cpp
cpp/TutorialRobot/src/GPS/Project_Code/: GenerateGPSData.cpp
cpp/Utilities/src/Utilities/: CMakeLists.txt  OSUtils.cpp  PythonBridge.cpp  Semaphore.cpp
cpp/Utilities/src/Utilities/unitTest/: BoundTest.cc  BulkLoadTest.cc  CMakeLists.txt  CommonMemory.cpp  CommonMemory.hpp  DumpRestoreTest.cc  InstantiationTest.cc  IteratorTest.cc  LargeTest.cc  Plugin.py  PythonBridge_unit.cpp  RelationTest.cc  Semaphore_unit.cpp  Signaler.cpp  Signaler.hpp  SimpleSemaphoreTest.cpp  SimpleSemaphoreTest.hpp  SimpleTest.cc  StructureTest.cc  Waiter.cpp  Waiter.hpp  speedtest-tune.cc  speedtest.cc  tpunit.cc
cpp/Utilities_FT/src/: BasicTest.cpp  CMakeLists.txt
cpp/include/Async/: AsyncExecution.hpp  ContinuableWorkItem.hpp  IChainLinker.hpp  IContinuableWorkItem.hpp  IEngine.hpp  IScheduler.hpp  IThread.hpp  JobPriorities.hpp  Promise.hpp  (+7 more)
cpp/src/FuturesFramework/: CMakeLists.txt  ConcurrencyStates.cpp  ContinuableWorkItem.cpp  HelloWorld.cpp  PromiseBase.cpp  PromiseStates.cpp  PromiseWorkItem.cpp  Result.cpp  Scheduler.cpp  SettlementStates.cpp  WorkItem.cpp  WorkItemStateMachine.cpp  WorkItemStates.cpp  WorkerThread.cpp
cpp/src/FuturesFramework/unitTest/: CMakeLists.txt  ContinuableWorkItem_unit.cpp  MockScheduler.cpp  MockScheduler.hpp  Promise_unit.cpp  WorkItemAndScheduler_unit.cpp  WorkItemStateMachineUnitTestInterface.cpp  WorkItemStateMachineUnitTestInterface.hpp  WorkItemStateMachine_unit.cpp  WorkItem_unit.cpp  WorkerThread_unit.cpp  catchConfig.cpp
cpp/src/Logging/: CMakeLists.txt  Factory.cpp  Logger.cpp  LoggingLevels.cpp
cpp/src/Logging/unitTest/: CMakeLists.txt  LoggerTestHelper.cpp  LoggerTestHelper.hpp  Logger_unit.cpp  catchPort.hpp
cpp/src/MessageFramework/: CMakeLists.txt
cpp/src/gtest/: CMakeLists.txt  gtest-death-test.cc  gtest-port.cc  gtest.cc
cpp/src/testApp/unitTest/: CMakeLists.txt  test.cpp
dependencies/: dependencies.txt
manual/: EECS395.S2016.Wood.Concept.Report.Robos-Robot.Operating.System.docx  EECS395.S2016.Wood.Proposal.Report.Robos-Robot.Operating.System.docx  PythonUnixInstallation.txt
manual/forClients/: NodeTutorial.txt
manual/forDevelopers/: AdvancedCPPTopicsYouShouldKnow.txt  AsynchronousProgramming.txt  BasicCPPTopicsYouShouldKnow.txt  Concurrency.txt  FuturesFramework.txt  HowToContribute.txt  InformationDependentExecution.txt  Logging.txt  MessageFramework.txt  ReadMe.txt  buildProcess.txt  ourBuildProcess.txt
projects/: CMakeLists.txt
projects/MessageFramework/: CMakeLists.txt  ReadMe.md.txt
scripts/: FileSystem.py  GlobalBuildRules.py  LocalBuildRules.py  LocalEnvironment.py  MessageCodeGenerator.py  MessageCodeGeneratorGuide  Utilities.py
(+169 files in other folders)
